<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/page_area"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/area"/>

    <item
        android:id="@+id/page_surroundings"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/surroundings"/>

    <item
        android:id="@+id/page_heart"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/heart"/>

    <item
        android:id="@+id/page_my"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/my"/>



</menu>