<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <ImageView
            android:id="@+id/iv_search_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="@id/iv_logo"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintEnd_toStartOf="@id/iv_shop"/>

        <ImageView
            android:id="@+id/iv_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shopping_cart_24"
            app:layout_constraintTop_toTopOf="@id/iv_search_bar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_search_bar"
            android:background="@android:color/background_light"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabTextColor="@color/black"
            app:tabSelectedTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accommodation"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fun"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip"/>

        </com.google.android.material.tabs.TabLayout>


<!--        <androidx.viewpager2.widget.ViewPager2-->
<!--            android:id="@+id/vp_home"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tab_main"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cv_recommend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tab_main"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_new_hot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newHot"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_new_hot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/tv_new_hot"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:listitem="@layout/item_new_hot"/>

                    <View
                        android:id="@+id/top_line"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/rv_new_hot"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="5"
                        app:layout_constraintTop_toBottomOf="@id/top_line"
                        tools:listitem="@layout/item_btn"/>

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vp_ad"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="2:1"
                        app:layout_constraintTop_toBottomOf="@id/rv_btn"/>

                    <TextView
                        android:id="@+id/tv_today_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_price"
                        app:layout_constraintTop_toBottomOf="@id/vp_ad"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_today_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/tv_today_price"
                        tools:listitem="@layout/item_today_price"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/tv_trip_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trip_area"
                        app:layout_constraintTop_toBottomOf="@id/rv_today_price"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_trip_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="4"
                        tools:itemCount="4"
                        app:layout_constraintTop_toBottomOf="@id/tv_trip_area"
                        tools:listitem="@layout/item_trip_area"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/btn_sign_up"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:paddingVertical="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rv_trip_area"
                        android:background="@drawable/rectangle_radius_3">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/weekly"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_pre_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_weekly"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/pre_hot" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/tv_weekly"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/total"
                        android:textColor="@color/black"/>

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vp_weekly"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_pre_weekly"/>

                    <TextView
                        android:id="@+id/tv_today_magazine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/magazine"
                        app:layout_constraintTop_toBottomOf="@id/vp_weekly"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_today_magazine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/tv_today_magazine"
                        tools:listitem="@layout/item_today_price"
                        android:layout_marginBottom="10dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>